# config/app/initializing_app.go
@@ -74,6 +74,7 @@ func InitializeApp(appContext appContext.AppContext) {
 		{
 			protected.POST("/create/mock", ginMock.CreateMock(appContext.GetMainDBConnection()))
 			protected.GET("/get/okx/:id", ginMock.GetMockById(appContext.GetMainDBConnection()))
+			protected.GET("/get/okx-info", ginMock.GetOkxInfo(appContext.GetMainDBConnection()))
 			protected.GET("/get/mocks", ginMock.GetMocks(appContext.GetMainDBConnection()))
 			protected.PUT("/update/okx/:id", ginMock.UpdateMock(appContext.GetMainDBConnection()))
 			protected.DELETE("/delete/okx/:id", ginMock.DeleteMock(appContext.GetMainDBConnection()))
