# docs/swagger.json
@@ -287,40 +287,6 @@
                 }
             }
         },
-        "/v1/get/okx/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Return Okx",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Okx"
-                ],
-                "summary": "Get Okx",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Okx ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Okx"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/get/mocks": {
             "get": {
                 "security": [
@@ -360,6 +326,65 @@
                             "items": {
                                 "$ref": "#/definitions/model.Okx"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/get/okx-info": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Return Okx",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Okx"
+                ],
+                "summary": "Get Okx",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Okx"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/get/okx/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Return Okx",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Okx"
+                ],
+                "summary": "Get Okx",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Okx ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Okx"
                         }
                     }
                 }
@@ -654,6 +679,12 @@
                 }
             }
         },
+        "model.MockAddRequest": {
+            "type": "object"
+        },
+        "model.MockUpdateRequest": {
+            "type": "object"
+        },
         "model.Okx": {
             "type": "object",
             "properties": {
@@ -664,12 +695,6 @@
                     "type": "string"
                 }
             }
-        },
-        "model.MockAddRequest": {
-            "type": "object"
-        },
-        "model.MockUpdateRequest": {
-            "type": "object"
         },
         "model.User": {
             "type": "object",
